--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -1512,3 +1512,199 @@
     model: Tab 7 Essential
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PMT3151_3G_D_CIS) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.115 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 92.0.4515.115
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: MultiPad Wize 3151 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PMT3231_4G_D_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 3231 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PMT4231_4G_D_EEA) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.77 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.77
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 4231 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PMT4231_4G_D_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 4231 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PMT4238_4G_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Q Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; X_Style_Tab_A104) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.115 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 92.0.4515.115
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Sigma
+    model: X-Style Tab A104
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; X_style_Tab_A83) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.88 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.88
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Sigma
+    model: X-Style Tab A83
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; A1-840) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Acer
+    model: Iconia Tab 8
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.1; ru-ru; ZT-97003G Build/JOP40D[20131216.194236]) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30 Instagram 54.0.0.14.82 Android (17/4.2.1; 160dpi; 1024x720; ULMART/ZIFRO; ZT-97003G; ZT-97003G; mt8389; ru_RU; 117539687)
+  os:
+    name: Android
+    version: 4.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: tablet
+    brand: ZIFRO
+    model: ZT-9700 3G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1.2; ru-ru; NetTAB_Space_3G Build/JZO54K) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: IconBIT
+    model: NetTAB Space 3G
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 2.3.5; ru-ru; MegaFon V9+ Build/GINGERBREAD) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
+  os:
+    name: Android
+    version: 2.3.5
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "533.1"
+  device:
+    type: tablet
+    brand: MegaFon
+    model: V9 Plus
+  os_family: Android
+  browser_family: Android Browser
