--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2319,3 +2319,21 @@
     model: Nexus Player
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Chromecast Build/QTS1.210311.008; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/91.0.4472.120 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Google
+    model: Chromecast (2020)
+  os_family: Android
+  browser_family: Chrome
