--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6705,7 +6705,7 @@ Goly:
 
 # Google
 Google:
-  regex: 'Nexus|GoogleTV|Google Fiber|Glass(?<!Browser)|CrKey[^a-z0-9]|(?:Pixel|sailfish|taimen|blueline)(?: Build|[)])|Pixel (?:XL|C|[2-5]|[2-4] XL)|Google 2XL|G011A'
+  regex: 'Nexus|GoogleTV|Google Fiber|Glass(?<!Browser)|CrKey[^a-z0-9]|(?:Pixel|sailfish|taimen|blueline|Chromecast)(?: Build|[)])|Pixel (?:XL|C|[2-5]|[2-4] XL)|Google 2XL|G011A'
   device: 'smartphone'
   models:
     - regex: 'Glass'
@@ -6726,6 +6726,9 @@ Google:
       model: 'Fiber $1'
     - regex: 'CrKey[^a-z0-9]'
       model: 'Chromecast'
+      device: 'tv'
+    - regex: 'Chromecast'
+      model: 'Chromecast (2020)'
       device: 'tv'
     - regex: 'GoogleTV'
       device: 'tv'
