--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2337,3 +2337,21 @@
     model: Chromecast (2020)
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; iconBIT Stick Build/V1.03.02MC03_20130126) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: IconBIT
+    model: Stick
+  os_family: Android
+  browser_family: Chrome
