--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -2516,7 +2516,7 @@
   device:
     type: smartphone
     brand: Alcatel
-    model: 1SE (2020)
+    model: 1SP (2020)
   os_family: Android
   browser_family: Opera
 -
