--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24625,6 +24625,16 @@ Vexia:
   device: 'tablet'
   model: '$1'
 
+# HiMax (himaxmobilebd.com)
+HiMax:
+  regex: ' HIMAX[_ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'POLYMER( X)?'
+      model: 'Polymer$1'
+    - regex: 'HIMAX[_ ]PURE[_ ]3S'
+      model: 'Pure 3S'
+
 # Devices with undectable brand, but detectable model
 Unknown:
   regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra)(?:[);/ ]|$)'
