--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12683,11 +12683,13 @@ Onda:
 
 # OnePlus (www.oneplus.com or oneplus.com.ru)
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[037]|LE212[035]|Nord N10 5G|LE210[01]|LE2121|DE2117|DN210[13])(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[037]|LE212[035]|Nord N10 5G|LE210[01]|LE2121|DE2117|DN210[13]|EB210[13])(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AC200[13](?:[);/ ]|$)'
       model: 'Nord 5G'
+    - regex: 'EB210[13](?:[);/ ]|$)'
+      model: 'Nord CE 5G'
     - regex: 'BE2012(?:[);/ ]|$)'
       model: 'Clover'
     - regex: 'BE201[135](?:[);/ ]|$)'
